objects/Case.object
<CustomObject>
    <fields>
        <fullName>Hours_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is populated from related records (MC Project / Meeting) to track the actual duration of the request.</description>
        <label>Hours Actual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Estimated__c</fullName>
        <inlineHelpText>Please indicate the number of hours this request is estimated to have?</inlineHelpText>
        <label>Hours Estimated</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Requested__c</fullName>
        <inlineHelpText>Please indicate the requested duration (in hours) this request will have.</inlineHelpText>
        <label>Hours Requested</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IR_number__c</fullName>
        <label>#IR number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Area__c</fullName>
        <description>***   ATTENTION DEVELOPERS   ***

This value drives automation to set the Module and Sub Module fields. Any changes here will need to be updated or added to the Case Impacted Areas custom metadata records.</description>
        <label>Impacted Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Premier_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment_Time__c</fullName>
        <label>Last Case Comment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Support_Communication__c</fullName>
        <label>Last Support Communication</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_comment__c</fullName>
        <label>Last comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_email__c</fullName>
        <label>Last email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_View_Contact_Check__c</fullName>
        <formula>ContactId = $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List View Contact Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Access_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Grant login access to the org where Copado is installed, and where you are experiencing the issue.
This access can be granted through My Settings&gt;Grant Account Login Access.  Next to Copado Solutions Support, select 1 week in the dropdown.</inlineHelpText>
        <label>Login Access Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>*** ATTENTION DEVELOPERS ***

This value is set automatically for community support cases base on the case&apos;s Impacted Area. Any changes to values here will need to be updated or added to the Case Impacted Areas custom metadata records.</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>AGILE</fullName>
                </value>
                <value>
                    <fullName>Agile Objects</fullName>
                </value>
                <value>
                    <fullName>ALM Integrations</fullName>
                </value>
                <value>
                    <fullName>Apex Tests</fullName>
                </value>
                <value>
                    <fullName>CCM-Integrations</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>Compliance Hub</fullName>
                </value>
                <value>
                    <fullName>Copado Commit</fullName>
                </value>
                <value>
                    <fullName>Copado Core</fullName>
                </value>
                <value>
                    <fullName>Copado Deploy</fullName>
                </value>
                <value>
                    <fullName>Copado DX</fullName>
                </value>
                <value>
                    <fullName>Copado Git Integration</fullName>
                </value>
                <value>
                    <fullName>Copado Labs Integrations</fullName>
                </value>
                <value>
                    <fullName>Copado Permissioner</fullName>
                </value>
                <value>
                    <fullName>DevOps Analytics</fullName>
                </value>
                <value>
                    <fullName>Environment Management</fullName>
                </value>
                <value>
                    <fullName>General Question</fullName>
                </value>
                <value>
                    <fullName>Heroku Plugin</fullName>
                </value>
                <value>
                    <fullName>Kanban Boards</fullName>
                </value>
                <value>
                    <fullName>Licenses and Features</fullName>
                </value>
                <value>
                    <fullName>Managed Package</fullName>
                </value>
                <value>
                    <fullName>MuleSoft Plugin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pipeline Manager</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>Promote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoReplyAge__c</fullName>
        <label>NoReplyAge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Reply_Hours_Temp__c</fullName>
        <label>No Reply Hours Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Only Opportunities associated to the Account listed on this Case will appear in this lookup.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <inlineHelpText>Provide your Salesforce Organization ID. You can find the value in Salesforce Setup menu, under Company Information.</inlineHelpText>
        <label>Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>sfLma__Package_Version__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Core</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>Copado DX</fullName>
                </value>
                <value>
                    <fullName>CCD</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CCH</fullName>
                </value>
                <value>
                    <fullName>ALM</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>OwnBackup</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Deployment__c</fullName>
        <inlineHelpText>Is this a production deployment?  Please list the environments that you are deploying from and to in the fields below</inlineHelpText>
        <label>Production Deployment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Outcome__c</fullName>
        <label>RCA/Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Services__c</fullName>
        <label>Related Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>CopaGCP</fullName>
                </value>
                <value>
                    <fullName>CopaFunctions</fullName>
                </value>
                <value>
                    <fullName>CopaGovCloud</fullName>
                </value>
                <value>
                    <fullName>CopaDedicated</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Copado Version Control</fullName>
                </value>
                <value>
                    <fullName>Git</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requesting_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requesting Team</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Team__c.copado__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Requirements</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scoped_Time_Investment__c</fullName>
        <label>Scoped Time Investment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <label>Source Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <inlineHelpText>Cancelled or backlog reason logged by the APO Case Manager</inlineHelpText>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Steps_to_Recreate__c</fullName>
        <label>Steps to Recreate</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <defaultValue>&quot;1.&quot; &amp; BR()&amp;
&quot;2.&quot; &amp; BR()&amp;
&quot;3.&quot; &amp; BR()</defaultValue>
        <inlineHelpText>Provide as much details as possible to assist us in reproducing the issue.</inlineHelpText>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Module__c</fullName>
        <description>*** ATTENTION DEVELOPERS ***

This value is set automatically for community support cases. Any changes to values here will need to be updated or added to the Case Impacted Areas custom metadata records.</description>
        <label>Sub Module</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Module__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Org Credentials</fullName>
                </value>
                <value>
                    <fullName>Git Repositories</fullName>
                </value>
                <value>
                    <fullName>Git Snapshots</fullName>
                </value>
                <value>
                    <fullName>Environments</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Deployments</fullName>
                </value>
                <value>
                    <fullName>User Stories</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>User Story Layout</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Sprints</fullName>
                </value>
                <value>
                    <fullName>Kanban Boards</fullName>
                </value>
                <value>
                    <fullName>Epics</fullName>
                </value>
                <value>
                    <fullName>Work Manager</fullName>
                </value>
                <value>
                    <fullName>Releases</fullName>
                </value>
                <value>
                    <fullName>Copado License Manager</fullName>
                </value>
                <value>
                    <fullName>Account Summary</fullName>
                </value>
                <value>
                    <fullName>Test Scripts</fullName>
                </value>
                <value>
                    <fullName>Test Runs</fullName>
                </value>
                <value>
                    <fullName>Selenium Test Cases</fullName>
                </value>
                <value>
                    <fullName>Selenium Test Suites</fullName>
                </value>
                <value>
                    <fullName>Selenium Test Runs</fullName>
                </value>
                <value>
                    <fullName>Selenium test Groups</fullName>
                </value>
                <value>
                    <fullName>Selenium Settings</fullName>
                </value>
                <value>
                    <fullName>Selenium Locators</fullName>
                </value>
                <value>
                    <fullName>DX Operation Panel</fullName>
                </value>
                <value>
                    <fullName>Scratch Orgs</fullName>
                </value>
                <value>
                    <fullName>Packages</fullName>
                </value>
                <value>
                    <fullName>Package Dependencies</fullName>
                </value>
                <value>
                    <fullName>Install Webhook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_in_Release_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted in Release Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Agent__c</fullName>
        <description>Support Agent providing the support. This field will be merged in the custom templates.</description>
        <label>Support Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Org__c</fullName>
        <label>Target Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Ending__c</fullName>
        <formula>IF(ISPICKVAL(Origin,&apos;Community&apos;), 

&apos;You can reply to this email or click: https://success.copa.do/s/case/&apos; &amp; Id &amp; &apos; to view this case on the Community.&apos;
, 

&apos;You can reply to this email to comment on the case.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Ending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Date_of_Last_Completion__c</fullName>
        <label>Date of Last Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Disable_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__First_Response_Time_In_Seconds__c</fullName>
        <label>First Response Time In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__First_Response_Time_Start__c</fullName>
        <label>First Response Time Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Original_Completion_Date__c</fullName>
        <label>Original Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Re_Run_Realtime_Clean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Run Traction Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Error_Message__c</fullName>
        <label>Traction Complete Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traction Complete Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traction Complete Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Response_Time_Within_Business_Hours__c</fullName>
        <label>Response Time Within Business Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Time_Delay_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Delay Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Priority__c</fullName>
        <label>User Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Timezone__c</fullName>
        <description>Conitans the time zone of user on which the user needs to be contacted.</description>
        <label>User Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>IF( 
  CEILING( ( DATEVALUE( CreatedDate ) - DATE( YEAR( DATEVALUE( CreatedDate ) ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( DATEVALUE( CreatedDate ) - DATE( YEAR( DATEVALUE( CreatedDate ) ), 1, 1) + 1) / 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Business_Hours__c</fullName>
        <formula>BusinessHours.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Business Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Action this Case relates to</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Counter__c</fullName>
        <label>Gift Budget Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Limit__c</fullName>
        <label>Gift Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Counter__c</fullName>
        <label>Gift Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Number_Limit__c</fullName>
        <label>Gift Number Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>APO_Platform_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>Business_Process__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>APO Platform Support</value>
        </filters>
        <label>APO Platform Support</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APO_Platform_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>APO Platform Support</label>
        <queue>APO_Platform_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APO_Request_Prioritization</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Needs Requirements,Groomed,Backlog,Prioritized,In progress,Developed,Tested,Deployed</value>
        </filters>
        <label>APO Request Prioritization</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Academy_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Academy Team</label>
        <queue>Academy_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Infrastructure_Tickets_Kanban</fullName>
        <booleanFilter>((1 AND 2) OR 4) AND 3</booleanFilter>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Request</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Infrastructure</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled,Closed,Closed - No response from customer,Complete,Converted to User Story,Closed - No Action</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Infrastructure_Request</value>
        </filters>
        <label>Active Infrastructure Tickets - Kanban</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CLOSED</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>OWNER_NAME</columns>
        <columns>Created_By_Me__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Infrastructure_Request</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Request</value>
        </filters>
        <label>All Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Academy,Case.Playground,Case.Support_Case</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenSupportCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.COMPANY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support_Case</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All Open Support Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_APO_Alliances_Requests</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>siqueira,Dodge,Belove,Ludwig,Sutton,Rossi,Ursini,lelliott,Jaunasse,vivek kumar,eddy perez,kehoe</value>
        </filters>
        <label>All APO Alliances Requests</label>
        <sharedTo>
            <role>Director_Alliances</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_APO_Requests</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>User_Story__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <label>All APO Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>